@@ -1,4 +1,8 @@
 2011-01-29  Carsten Haitzler (The Rasterman)
 
         1.0.0 release
-        
+
+2011-10-05  Vincent Torri
+
+	* use fseek() instead of rewind() as the latter does not exist on
+	Windows CE and fix compilation with Evil.
